--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.8",
+    "axios": "^1.9.0",
+    "decode": "^0.3.0",
+    "dotenv": "^16.5.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -44,5 +50,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
+
 }
