--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.8",
+    "apexcharts": "^5.3.3",
     "axios": "^1.9.0",
     "decode": "^0.3.0",
     "dotenv": "^16.5.0",
@@ -19,11 +20,13 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "recharts": "^3.1.2",
     "sass": "^1.87.0",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
